--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,18 +1,21 @@
 ---
-- hosts: 192.168.0.135
+- hosts: all
   become: true
   tasks:
 
   - name: update repository index
     ansible.builtin.apt:
       update_cache: yes 
+    when: ansible_distribution == "Ubuntu"
 
   - name: install apache2 package
     ansible.builtin.apt:
       name: apache2
       state: latest
+    when: ansible_distribution == "Ubuntu"
 
   - name: install support for php
     ansible.builtin.apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution == "Ubuntu"
